# go-fish

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: docker-build-game-server.yml  docker-build-tui-client.yml
go-fish/: CLAUDE.md  Cargo.toml  README.md
go-fish-cli-client/: Cargo.toml  config.toml
go-fish-cli-client/src/: lib.rs  main.rs
go-fish-game-server/: CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml
go-fish-game-server-prototype/: Cargo.toml
go-fish-game-server-prototype/src/: main.rs
go-fish-game-server/docs/: design.md  requirements.md
go-fish-game-server/src/: connection.rs  lib.rs  lobby.rs  main.rs
go-fish-tui-client/: CLAUDE.md  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
go-fish-tui-client/proptest-regressions/: state_tests.txt
go-fish-tui-client/src/: event_loop.rs  input.rs  main.rs  network.rs  state.rs  state_tests.rs  ui.rs
go-fish-tui-client/src/assets/: go-fish-display-string.txt
go-fish-web/: CLAUDE.md  Cargo.toml  Dockerfile.pond  README.md
go-fish-web/src/: lib.rs
go-fish/src/: bots.rs  game_tests.rs  lib.rs
go-fish/tests/: complete_games.proptest-regressions  complete_games.rs
go-fish/tests/drivers/: mod.rs
src/: book.rs  card.rs  deck.rs  game.rs  game_tests.rs  gamestate.rs  hand.rs  hook.rs  lib.rs  player.rs
tests/: complete_games.rs
tests/drivers/: mod.rs
