[package]
name = "go-fish-cli-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
tokio = "1.50.0"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
serde_json = "1.0.149"
go-fish = "0.1.2"
go-fish-web = {path = "../go-fish-web"}
