[package]
name = "go-fish-game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
toml = "1.0.7+spec-1.1.0"
anyhow = "1.0.102"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.50.0"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1.0.149"
go-fish = "0.1.2"
go-fish-web = {path = "../go-fish-web"}
