[package]
name = "go-fish-game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
toml = "1.0.7+spec-1.1.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tungstenite = "0.28.0"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
