[package]
name = "go-fish-game-server"
version = "0.1.0"
edition = "2024"
description = "Game server that manages a go-fish game"
license = "MIT"
repository = "https://github.com/SmithTom6304/go-fish"
documentation = "https://docs.rs/go-fish-game-server"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
bytes = "1"
futures-util = "0.3.32"
go-fish = { path = "../go-fish", version = "0.1.3" }
go-fish-web = { path = "../go-fish-web", version = "0.1.0" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.7"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tungstenite = "0.28.0"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
