[package]
name = "go-fish-tui-client"
version = "0.1.0"
edition = "2021"

[dependencies]
go-fish = { path = "../go-fish" }
go-fish-web = { path = "../go-fish-web" }
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt", "macros"] }
