[package]
name = "go-fish-tui-client"
version = "0.2.2"
edition = "2021"
rust-version = "1.85.0"
resolver = "3"
description = "A terminal (and WASM) client for the Go Fish card game, built with ratatui."
readme = "README.md"
license = "MIT"
repository = "https://github.com/SmithTom6304/go-fish"
documentation = "https://docs.rs/go-fish-tui-client"
keywords = ["game", "cards", "go-fish", "tui", "ratatui"]
categories = ["games", "command-line-interface"]

[dependencies]
go-fish = { version = "0.2.0", path = "../go-fish" }
go-fish-web = { version = "0.2.0", path = "../go-fish-web" }
toml = "1.0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
wasm-bindgen = "0.2.117"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui = { version = "0.30", default-features = false }
ratzilla = "0.3.0"
gloo-net = { version = "0.6", features = ["websocket"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tokio = { version = "1", features = ["sync", "macros"], default-features = false }
futures-util = { version = "0.3", features = ["sink"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom4 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt", "macros"] }
