[package]
name = "go-fish-web"
version = "0.1.0"
edition = "2024"
description = "Web protocol types for the go-fish game"
license = "MIT"
repository = "https://github.com/SmithTom6304/go-fish"
documentation = "https://docs.rs/go-fish-web"

[dependencies]
go-fish = { version = "0.1.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"