[package]
name = "go-fish-web"
version = "0.2.0"
edition = "2024"
description = "Web protocol types for the go-fish game"
readme = "README.md"
license = "MIT"
repository = "https://github.com/SmithTom6304/go-fish"
documentation = "https://docs.rs/go-fish-web"

[dependencies]
go-fish = { version = "0.2.0", path = "../go-fish" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"