[package]
name = "go-fish"
description = "The classic Go Fish card game"
readme = "../README.md"
license = "MIT"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/SmithTom6304/go-fish"
documentation = "https://docs.rs/go-fish"

[dependencies]
enum-iterator = "2.3.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.26.1"
