[package]
name = "go-fish"
description = "A core engine for the classic Go Fish card game, providing game logic, deck management, and player interactions."
readme = "../README.md"
license = "MIT"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/SmithTom6304/go-fish"
documentation = "https://docs.rs/go-fish"
keywords = ["game", "cards", "go-fish", "engine"]
categories = ["games"]

[dependencies]
enum-iterator = "2.3.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["default", "env-filter"] }

[dev-dependencies]
rstest = "0.26.1"
